--- a/ankerias.cabal
+++ b/ankerias.cabal
@@ -21,7 +21,8 @@ Executable ankerias
     mtl                       >= 2     && < 3,
     snap-core                 >= 0.9   && < 0.10,
     snap-server               >= 0.9   && < 0.10,
-    process                   >= 1.0.1.5
+    process                   >= 1.0.1.5,
+    regex-tdfa                >= 1.1.8
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
