--- a/ankerias.cabal
+++ b/ankerias.cabal
@@ -23,9 +23,12 @@ Executable ankerias
     snap-server               >= 0.9   && < 0.10,
     process                   >= 1.0.1.5,
     regex-tdfa                >= 1.1.8
+  
+  Extra-libraries:
+    telldus-core
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
-                 -fno-warn-unused-do-bind
+                 -fno-warn-unused-do-bind 
   else
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
